--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-balethon
-python-bale-bot
-requests
-aiohttp
+aiohttp==3.9.1
+aiosignal==1.3.1
+asyncio==3.4.3
+attrs==24.2.0
+frozenlist==1.4.1
+idna==3.10
+multidict==6.1.0
+propcache==0.2.0
+python-bale-bot==2.5.0
+setuptools==69.0.3
+yarl==1.15.5
