--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ idna==3.10
 multidict==6.1.0
 propcache==0.2.0
 python-bale-bot==2.5.0
+python-dotenv==1.0.1
 setuptools==69.0.3
-yarl==1.15.1
+yarl==1.15.5
