--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ aiohttp==3.9.1
 aiosignal==1.3.1
 asyncio==3.4.3
 attrs==24.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
 frozenlist==1.4.1
 idna==3.10
 multidict==6.1.0
@@ -9,4 +11,5 @@ propcache==0.2.0
 python-bale-bot==2.5.0
 python-dotenv==1.0.1
 setuptools==69.0.3
+soupsieve==2.6
 yarl==1.15.5
