--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,32 @@ aiosignal==1.3.1
 asyncio==3.4.3
 attrs==24.2.0
 beautifulsoup4==4.12.3
+Brotli==1.1.0
 bs4==0.0.2
+certifi==2024.12.14
+charset-normalizer==3.4.1
+colorama==0.4.6
+filelock==3.17.0
 frozenlist==1.4.1
+fsspec==2024.12.0
+g4f==0.4.2.6
 html5lib==1.1
 idna==3.10
 multidict==6.1.0
+nest-asyncio==1.6.0
+packaging==24.2
+pillow==11.1.0
 propcache==0.2.0
+pycryptodome==3.21.0
 python-bale-bot==2.5.0
 python-dotenv==1.0.1
+PyYAML==6.0.2
+requests==2.32.3
 setuptools==69.0.3
 six==1.16.0
 soupsieve==2.6
+tqdm==4.67.1
+typing_extensions==4.12.2
+urllib3==2.3.0
 webencodings==0.5.1
 yarl==1.15.5
